[tool.poetry]
name = "house-prices"
version = "0.1.0"
description = ""
authors = ["stevemichaelwhite <stevemichaelwhite@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
numpy = "^1.22.3"
kaggle = "^1.5.12"
seaborn = "^0.11.2"
ipython = "^8.1.1"
dask = "^2022.3.0"
statsmodels = "^0.13.2"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"
qtconsole = "^5.3.0"
PyQt5 = "^5.15.6"
sklearn = "^0.0"
xgboost = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
